# kimm_identification

./: CMakeLists.txt  README.md  package.xml
cfg/: ekf_param.cfg
include/kimm_identification/: id_simul.h
kimm_identification/: README.md
kimm_identification/include/kimm_identification/: id_simul.h
kimm_identification/launch/: obj_param_id_simulation.launch
launch/: obj_param_id_simulation.launch
rqt/: kimm_identification.perspective
src/: id_simul.cpp
